--- a/作业提交/提交清单.md
+++ b/作业提交/提交清单.md
@@ -28,6 +28,25 @@
   - `docker-start.sh` - Docker 启动脚本
   - `docker-compose.yml` - Docker Compose 配置
 
+## 🧪 助教快速测试
+
+### 测试账户信息
+```
+📧 用户名: 335933870@qq.com
+🔐 密码: 123321
+```
+
+### 一键测试流程
+```bash
+# 1. 启动容器
+docker run --rm -p 3000:3000 --platform linux/amd64 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
+
+# 2. 访问应用 (新标签页)
+# http://localhost:3000/auth/signin
+
+# 3. 使用测试账户登录体验功能
+```
+
 ## 🚀 快速验证指令
 
 ### 最简运行命令
@@ -129,6 +148,30 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 - [x] Supabase 云数据库已配置
 - [x] 用户表和行程表已创建
 - [x] 数据持久化功能正常
+
+### 🚨 重要提醒：Supabase 密钥过期处理
+
+**Supabase 免费版密钥会定期过期**，如果助教在测试时遇到以下情况：
+
+#### 过期症状：
+- ❌ 用户注册/登录功能失效
+- ❌ "保存到我的行程"功能异常
+- ❌ 浏览器控制台出现数据库连接错误
+
+#### 系统应对机制：
+- ✅ **自动降级**：系统检测到数据库连接失败后，会自动切换到本地存储模式
+- ✅ **核心功能保持**：AI 行程规划、地图可视化、预算管理等主要功能完全不受影响
+- ✅ **用户体验**：除了数据持久化，其他功能体验完全一致
+
+#### 验证方法：
+1. 访问配置页面：http://localhost:3000/config
+2. 点击 Supabase 标签页的"🧪 测试连接"
+3. 查看连接状态和错误信息
+
+#### 联系方式：
+- **开发者**：ShadowOnYOU  
+- **GitHub**：https://github.com/ShadowOnYOU/AI_travel_Planner
+- 如需更新密钥，可通过 GitHub Issues 联系
 
 ## 🏆 项目亮点
 
