feat: 添加关键的API密钥配置说明
- 发现即使镜像预配置了API密钥，首次使用仍需通过配置页面初始化
- 在所有测试文档中添加必须的API配置步骤
- 新增详细的首次使用配置指南
- 更新助教测试指南、Docker运行说明等7个文档
- 确保用户不会因跳过配置而无法使用核心功能

--- a/作业提交/助教测试指南.md
+++ b/作业提交/助教测试指南.md
@@ -15,6 +15,40 @@ docker run --rm -p 3000:3000 --platform linux/amd64 crpi-ttmopfgqdmld0jn5.cn-han
 
 ## 🧪 功能测试路径
 
+### ⚠️ 必须首先进行：API密钥配置验证
+
+**重要**：在进行任何功能测试之前，必须先配置和验证API密钥，否则核心功能无法正常工作。
+
+#### Step 0: API密钥配置（必须第一步完成）
+1. **访问配置页面**：http://localhost:3000/config
+2. **配置高德地图API**：
+   - 点击"高德地图"标签页
+   - 输入API Key：`1e967f9e5d863f52e8e76a8b7c381669`
+   - 点击"🧪 测试连接"验证
+   - 确保显示"✅ 连接成功"
+
+3. **配置阿里云百炼AI**：
+   - 点击"阿里云百炼"标签页
+   - 输入以下信息：
+     ```
+     API Key: sk-7b2ff1814ecb499d89d56e86af030b19
+     Base URL: https://dashscope.aliyuncs.com/compatible-mode/v1
+     Model ID: qwen-plus
+     ```
+   - 点击"🧪 测试连接"验证
+   - 确保显示"✅ 连接成功"
+
+4. **保存配置**：
+   - 点击"💾 保存配置"按钮
+   - 确认配置已保存
+
+**预期结果**：所有API连接状态显示为绿色"✅ 已连接"
+
+**⚠️ 如果跳过此步骤**：
+- AI行程规划功能将无法工作
+- 地图显示可能异常
+- 系统会显示API配置错误
+
 ### 1. 基础功能验证（必测）
 
 #### Step 1: 用户系统测试
