--- a/作业提交/提交清单.md
+++ b/作业提交/提交清单.md
@@ -41,11 +41,20 @@
 # 1. 启动容器
 docker run --rm -p 3000:3000 --platform linux/amd64 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
 
-# 2. 访问应用 (新标签页)
+# 2. ⚠️ 必须先配置API密钥 (新标签页)
+# http://localhost:3000/config
+# 配置高德地图和阿里云百炼API，点击测试连接并保存
+
+# 3. 访问应用登录页面 (新标签页)
 # http://localhost:3000/auth/signin
 
-# 3. 使用测试账户登录体验功能
+# 4. 使用测试账户登录体验功能
 ```
+
+**🚨 重要警告**：步骤2的API配置是必需的！跳过此步骤会导致：
+- AI行程规划功能完全无法使用
+- 地图显示异常或无法加载
+- 系统显示配置错误提示
 
 ## 🚀 快速验证指令
 
