--- a/作业提交总结.md
+++ b/作业提交总结.md
@@ -70,8 +70,11 @@ echo "✅ 启动成功！访问: http://localhost:3000"
 
 ### 快速测试流程
 1. 启动容器: `docker run --rm -p 3000:3000 --platform linux/amd64 [镜像地址]`
-2. 访问登录页: http://localhost:3000/auth/signin
-3. 使用测试账户登录体验完整功能
+2. **⚠️ 必须先配置API**: 访问 http://localhost:3000/config 配置密钥
+3. 访问登录页: http://localhost:3000/auth/signin
+4. 使用测试账户登录体验完整功能
+
+**重要提醒**：步骤2的API配置是必需的，跳过将导致核心功能无法使用！
 
 ## 🔑 预配置信息
 
