fix: 修复Docker启动命令 - 添加必需的环境变量
问题分析:
- 原命令缺少API密钥环境变量导致功能异常
- --rm参数会在容器停止时自动删除，不便于管理

修复内容:
- 在所有Docker命令中添加NEXT_PUBLIC_AMAP_KEY和NEXT_PUBLIC_BAILIAN_API_KEY
- 使用-d后台运行模式替代--rm
- 添加--name参数便于容器管理
- 更新README.md, Docker运行说明.md, 助教测试指南.md中的命令
- 新增容器管理命令说明和故障排除指南

影响文件:
- README.md: 更新方法3的Docker命令
- Docker运行说明.md: 修复基础运行命令
- 助教测试指南.md: 更新快速启动命令并添加管理说明

--- a/作业提交/助教测试指南.md
+++ b/作业提交/助教测试指南.md
@@ -4,7 +4,31 @@
 
 ### 一键启动命令
 ```bash
-docker run --rm -p 3000:3000 --platform linux/amd64 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
+docker run -d --name ai-travel-planner -p 3000:3000 --platform linux/amd64 -e NEXT_PUBLIC_AMAP_KEY=f47ba60794341f862ce2c49df4e2e14b -e NEXT_PUBLIC_BAILIAN_API_KEY=sk-9404820cdc734865a5301c966c4ad016 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
+```
+
+**命令说明**：
+- `-d`: 后台运行容器
+- `--name`: 给容器命名，便于管理
+- `-p 3000:3000`: 端口映射
+- `--platform linux/amd64`: 确保兼容性
+- `-e`: 设置环境变量（API密钥）
+
+**⚠️ 重要**：环境变量是必需的，缺少会导致AI功能和地图功能无法正常工作！
+
+### 容器管理命令
+```bash
+# 查看运行状态
+docker ps
+
+# 停止容器
+docker stop ai-travel-planner
+
+# 重新启动
+docker start ai-travel-planner
+
+# 删除容器（如需重新创建）
+docker rm ai-travel-planner
 ```
 
 ### 测试账户
@@ -161,5 +185,5 @@ docker run --rm -p 3000:3000 --platform linux/amd64 [镜像地址]
 
 **🎯 快速验证命令**（推荐复制粘贴）:
 ```bash
-docker run --rm -p 3000:3000 --platform linux/amd64 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest && echo "访问 http://localhost:3000/auth/signin 使用账户 335933870@qq.com / 123321"
+docker run -d --name ai-travel-planner -p 3000:3000 --platform linux/amd64 -e NEXT_PUBLIC_AMAP_KEY=f47ba60794341f862ce2c49df4e2e14b -e NEXT_PUBLIC_BAILIAN_API_KEY=sk-9404820cdc734865a5301c966c4ad016 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest && echo "访问 http://localhost:3000/auth/signin 使用账户 335933870@qq.com / 123321"
 ```
