fix: 解决Apple Silicon Mac平台兼容性问题
问题分析:
- Apple Silicon Mac (ARM64) 无法直接拉取 linux/amd64 镜像
- 错误: no matching manifest for linux/arm64/v8 in the manifest list entries

解决方案:
- 在所有docker pull命令中添加 --platform linux/amd64 参数
- 更新助教测试指南添加详细的平台兼容性说明
- 提供完整的故障排除流程

修复内容:
- 助教测试指南.md: 添加平台兼容性详细说明和故障排除
- Docker运行说明.md: 更新拉取命令添加平台参数
- 平台兼容性说明.md: 补充具体的拉取命令示例

测试验证:
- 在ARM64 Mac上成功拉取镜像: bb897e1021c1
- 确认 --platform linux/amd64 参数有效

--- a/作业提交/助教测试指南.md
+++ b/作业提交/助教测试指南.md
@@ -157,8 +157,8 @@ docker --version
 # 查看详细日志
 docker logs [容器名]
 
-# 重新拉取镜像
-docker pull crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
+# 重新拉取镜像（指定平台）
+docker pull --platform linux/amd64 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
 ```
 
 ### 端口占用
@@ -168,10 +168,31 @@ docker run --rm -p 8080:3000 --platform linux/amd64 [镜像地址]
 # 然后访问 http://localhost:8080
 ```
 
-### 平台兼容性
+### 平台兼容性问题
+
+**Apple Silicon Mac (ARM64) 架构问题**：
+
+**问题现象**：
+```
+no matching manifest for linux/arm64/v8 in the manifest list entries
+```
+
+**解决方案**：
 ```bash
-# Apple Silicon Mac 用户
-docker run --rm -p 3000:3000 --platform linux/amd64 [镜像地址]
+# 1. 拉取镜像时指定平台
+docker pull --platform linux/amd64 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
+
+# 2. 运行时确保使用 --platform 参数
+docker run -d --name ai-travel-planner -p 3000:3000 --platform linux/amd64 -e NEXT_PUBLIC_AMAP_KEY=f47ba60794341f862ce2c49df4e2e14b -e NEXT_PUBLIC_BAILIAN_API_KEY=sk-9404820cdc734865a5301c966c4ad016 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
+
+# 3. 如果仍有问题，清理并重试
+docker system prune -a --volumes
+```
+
+**Intel Mac 用户**：
+```bash
+# 直接运行，无需指定平台
+docker run -d --name ai-travel-planner -p 3000:3000 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
 ```
 
 ## 📞 联系方式
