--- a/作业提交/平台兼容性说明.md
+++ b/作业提交/平台兼容性说明.md
@@ -19,6 +19,14 @@
 
 ### 方法一：强制使用 x86_64 平台（推荐）
 
+#### 拉取镜像
+```bash
+docker pull --platform linux/amd64 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
+```
+
+#### 运行容器
+```
+
 ```bash
 # 强制拉取 x86_64 版本镜像
 docker pull --platform linux/amd64 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
