feat: 完善助教测试指南 - 添加源码部署和完整测试流程
新增内容:
1. 源码部署完整流程:
   - GitHub克隆和依赖安装
   - 环境变量配置详细说明
   - 开发和生产模式启动
   - 自动化脚本使用说明

2. 部署方式对比表:
   - Docker vs 源码部署优劣势对比
   - 不同场景的推荐使用方式

3. 完善的故障排除:
   - Docker部署故障处理
   - 源码部署常见问题解决
   - Node.js版本、依赖、构建、端口等问题

4. 完整测试检查清单:
   - 分步骤的验证流程
   - 关键功能测试点
   - 质量评估标准

5. 更新.env.example:
   - 添加详细的配置说明
   - 提供测试用的API密钥
   - 区分必需和可选配置

改进效果:
- 助教可选择最适合的部署方式
- 提供完整的从0到1的部署指南
- 包含全面的故障排除方案
- 标准化的测试验证流程

--- a/作业提交/助教测试指南.md
+++ b/作业提交/助教测试指南.md
@@ -2,7 +2,11 @@
 
 ## 🚀 快速开始
 
-### 一键启动命令
+有两种部署方式可选择：**Docker镜像部署**（推荐）和**源码编译部署**
+
+### 方式一：Docker镜像部署（推荐）⭐
+
+#### 一键启动命令
 ```bash
 docker run -d --name ai-travel-planner -p 3000:3000 --platform linux/amd64 -e NEXT_PUBLIC_AMAP_KEY=f47ba60794341f862ce2c49df4e2e14b -e NEXT_PUBLIC_BAILIAN_API_KEY=sk-9404820cdc734865a5301c966c4ad016 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
 ```
@@ -30,6 +34,92 @@ docker start ai-travel-planner
 # 删除容器（如需重新创建）
 docker rm ai-travel-planner
 ```
+
+### 方式二：从GitHub源码部署
+
+#### 前置要求
+- Node.js 20+ 
+- npm 或 yarn 
+- Git
+
+#### 步骤1: 克隆仓库
+```bash
+git clone https://github.com/ShadowOnYOU/AI_travel_Planner.git
+cd AI_travel_Planner
+```
+
+#### 步骤2: 安装依赖
+```bash
+# 使用npm（推荐）
+npm install --legacy-peer-deps
+
+# 或使用yarn
+yarn install
+```
+
+#### 步骤3: 环境配置
+```bash
+# 复制环境变量模板
+cp .env.example .env.local
+
+# 编辑环境变量文件
+nano .env.local  # 或使用其他编辑器
+```
+
+在 `.env.local` 中设置以下变量：
+```bash
+# 高德地图API
+NEXT_PUBLIC_AMAP_KEY=f47ba60794341f862ce2c49df4e2e14b
+
+# 阿里云百炼AI
+NEXT_PUBLIC_BAILIAN_API_KEY=sk-9404820cdc734865a5301c966c4ad016
+NEXT_PUBLIC_BAILIAN_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+NEXT_PUBLIC_BAILIAN_MODEL_ID=qwen-plus
+
+# Supabase数据库（可选，用于用户系统）
+NEXT_PUBLIC_SUPABASE_URL=https://untvtsdpychqwikqdkgg.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVudHZ0c2RweWNocXdpa3Fka2dnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA1NjM4NjQsImV4cCI6MjA3NjEzOTg2NH0.3lTm4PFwCxxKWgjE5YFP90I0oQgNKn-scOKCOqitIWs
+```
+
+#### 步骤4: 启动应用
+```bash
+# 开发模式
+npm run dev
+
+# 或生产模式
+npm run build
+npm start
+```
+
+#### 步骤5: 访问应用
+- 开发模式：http://localhost:3000
+- 生产模式：http://localhost:3000
+
+#### 自动化脚本
+项目提供了便捷的启动脚本：
+```bash
+# 使用内置脚本
+chmod +x run.sh
+./run.sh
+
+# 或使用Docker脚本
+chmod +x docker-start.sh  
+./docker-start.sh
+```
+
+### 部署方式对比
+
+| 特性 | Docker镜像 | 源码编译 |
+|------|------------|----------|
+| 部署速度 | ⭐⭐⭐⭐⭐ 极快 | ⭐⭐⭐ 中等 |
+| 环境依赖 | ⭐⭐⭐⭐⭐ 仅需Docker | ⭐⭐ 需Node.js环境 |
+| 资源占用 | ⭐⭐⭐ 中等 | ⭐⭐⭐⭐ 较低 |
+| 调试便利 | ⭐⭐ 有限 | ⭐⭐⭐⭐⭐ 极佳 |
+| 适用场景 | 快速验证、生产部署 | 开发调试、功能扩展 |
+
+**推荐**：
+- **快速验证功能**：使用Docker镜像部署
+- **深度测试调试**：使用源码编译部署
 
 ### 测试账户
 ```
@@ -149,7 +239,9 @@ docker rm ai-travel-planner
 
 ## 🚨 故障处理
 
-### 容器启动失败
+### Docker部署故障
+
+#### 容器启动失败
 ```bash
 # 检查 Docker 状态
 docker --version
@@ -192,8 +284,63 @@ docker system prune -a --volumes
 **Intel Mac 用户**：
 ```bash
 # 直接运行，无需指定平台
-docker run -d --name ai-travel-planner -p 3000:3000 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
+docker run -d --name ai-travel-planner -p 3000:3000 -e NEXT_PUBLIC_AMAP_KEY=f47ba60794341f862ce2c49df4e2e14b -e NEXT_PUBLIC_BAILIAN_API_KEY=sk-9404820cdc734865a5301c966c4ad016 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest
 ```
+
+### 源码部署故障
+
+#### Node.js版本问题
+```bash
+# 检查Node.js版本（需要20+）
+node --version
+
+# 如果版本过低，安装新版本
+# 推荐使用nvm管理Node.js版本
+curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
+nvm install 20
+nvm use 20
+```
+
+#### 依赖安装失败
+```bash
+# 清理缓存后重新安装
+npm cache clean --force
+rm -rf node_modules package-lock.json
+npm install --legacy-peer-deps
+
+# 如果仍有问题，尝试yarn
+npm install -g yarn
+yarn install
+```
+
+#### 构建失败
+```bash
+# 检查环境变量是否正确设置
+cat .env.local
+
+# 如果缺少.env.local文件
+cp .env.example .env.local
+nano .env.local  # 按上述说明填写
+
+# 重新构建
+npm run build
+```
+
+#### 端口占用问题
+```bash
+# 查看端口占用
+lsof -i :3000
+
+# 使用其他端口启动
+PORT=8080 npm run dev
+# 然后访问 http://localhost:8080
+```
+
+#### API连接问题
+- 确保网络连接正常
+- 检查API密钥是否正确配置
+- 访问 http://localhost:3000/config 进行配置验证
+- 查看浏览器开发者工具的网络面板排查具体错误
 
 ## 📞 联系方式
 
@@ -204,7 +351,52 @@ docker run -d --name ai-travel-planner -p 3000:3000 crpi-ttmopfgqdmld0jn5.cn-han
 
 ---
 
-**🎯 快速验证命令**（推荐复制粘贴）:
+## 📋 完整测试检查清单
+
+### 预备检查
+- [ ] Docker已安装并运行（Docker部署）或Node.js 20+已安装（源码部署）
+- [ ] 网络连接正常
+- [ ] 端口3000未被占用
+
+### 部署验证
+- [ ] 应用成功启动（Docker容器运行或npm进程启动）
+- [ ] 访问 http://localhost:3000 显示登录页面
+- [ ] 页面样式正常加载，无明显UI错误
+
+### API配置验证（关键步骤）
+- [ ] 访问 http://localhost:3000/config
+- [ ] 高德地图API配置成功（绿色✅状态）
+- [ ] 阿里云百炼AI配置成功（绿色✅状态）
+- [ ] 点击"保存配置"成功
+
+### 核心功能验证
+- [ ] 使用测试账户 335933870@qq.com / 123321 成功登录
+- [ ] 访问 http://localhost:3000/plan 规划页面
+- [ ] 填写旅行信息并生成AI行程
+- [ ] 查看生成的详细行程内容
+- [ ] 看到黄色保存提示横幅
+- [ ] 点击"保存到我的行程"成功
+- [ ] 访问 http://localhost:3000/itinerary 查看保存的行程
+
+### 可选功能验证
+- [ ] 地图可视化功能正常
+- [ ] 语音输入功能可用（需浏览器支持）
+- [ ] 响应式设计在不同屏幕尺寸下正常
+
+### 质量评估
+- [ ] 生成的行程内容合理、详细
+- [ ] 用户界面友好，交互流畅
+- [ ] 无明显的功能性错误
+- [ ] 保存提示机制有效改善用户体验
+
+---
+
+**🎯 Docker快速验证命令**（推荐复制粘贴）:
 ```bash
 docker run -d --name ai-travel-planner -p 3000:3000 --platform linux/amd64 -e NEXT_PUBLIC_AMAP_KEY=f47ba60794341f862ce2c49df4e2e14b -e NEXT_PUBLIC_BAILIAN_API_KEY=sk-9404820cdc734865a5301c966c4ad016 crpi-ttmopfgqdmld0jn5.cn-hangzhou.personal.cr.aliyuncs.com/ai_by_sgh/ai-travel-planner:latest && echo "访问 http://localhost:3000/auth/signin 使用账户 335933870@qq.com / 123321"
+```
+
+**🛠️ 源码快速验证命令**:
+```bash
+git clone https://github.com/ShadowOnYOU/AI_travel_Planner.git && cd AI_travel_Planner && npm install --legacy-peer-deps && cp .env.example .env.local && echo "请编辑 .env.local 配置API密钥后执行: npm run dev"
 ```
