--- a/作业提交/首次使用配置指南.md
+++ b/作业提交/首次使用配置指南.md
@@ -64,17 +64,19 @@ docker run --rm -p 3000:3000 --platform linux/amd64 crpi-ttmopfgqdmld0jn5.cn-han
 最后测试：刚刚
 ```
 
-## 🎯 配置完成后的功能验证
+## 🎯 使用完整功能
 
-### 1. 测试AI规划功能
-- 访问：http://localhost:3000/plan
-- 填写任意旅行需求
-- 点击"生成行程"
-- **预期结果**：成功生成详细行程
+配置完成后，您可以：
 
-### 2. 测试地图功能  
-- 在生成的行程中点击"🗺️ 查看地图"
-- **预期结果**：显示带有景点标记的地图
+1. **生成 AI 旅行计划**：访问 http://localhost:3000/plan
+2. **管理个人行程**：http://localhost:3000/itinerary
+   - 查看所有保存的行程
+   - 点击行程卡片进入详情页面
+   - 使用"✏️ 编辑行程"按钮修改行程信息
+   - 支持编辑标题、目的地、预算、状态等
+   - 添加/删除标签进行分类管理
+3. **查看地图可视化**：在行程详情中查看路线和景点位置
+4. **配置系统设置**：随时回到配置页面调整API密钥
 
 ## 🚨 常见问题
 
