--- a/作业提交总结.md
+++ b/作业提交总结.md
@@ -31,8 +31,9 @@ echo "✅ 启动成功！访问: http://localhost:3000"
 1. **首页**: http://localhost:3000
 2. **用户登录**: http://localhost:3000/auth/signin  
 3. **智能规划**: http://localhost:3000/plan
-4. **地图可视化**: http://localhost:3000/map
-5. **预算管理**: http://localhost:3000/budget
+4. **行程管理**: http://localhost:3000/itinerary（支持查看、编辑、删除行程）
+5. **地图可视化**: http://localhost:3000/map
+6. **预算管理**: http://localhost:3000/budget
 
 ## 📁 提交文件
 
@@ -56,8 +57,9 @@ echo "✅ 启动成功！访问: http://localhost:3000"
 
 1. **🤖 AI 智能规划**: 阿里云百炼 + 自然语言处理
 2. **🗺️ 地图可视化**: 高德地图 + 路线优化算法
-3. **☁️ 云原生部署**: Docker + 阿里云镜像仓库
-4. **📱 响应式设计**: 支持桌面和移动端
+3. **✏️ 行程管理**: 完整的CRUD操作，支持编辑、状态管理、标签分类
+4. **☁️ 云原生部署**: Docker + 阿里云镜像仓库
+5. **📱 响应式设计**: 支持桌面和移动端
 5. **🔧 完善的工程实践**: TypeScript + 错误处理 + 跨平台兼容
 
 ## 🧪 助教测试信息
